# photostudio-booking

./: pyproject.toml
photostudio-booking/: .env.example  .gitignore  ADDITIONAL_SERVICES.md  Dockerfile  FIX_CALENDAR.md  MOBILE_GUIDE.md  QUICKSTART.md  QUICK_MOBILE_UPDATE.md  README.md  README_EN.md  README_UA.md  SETUP.md  TELEGRAM_SETUP.md  UPDATE_GUIDE.md  UPDATE_TO_TELEGRAM.md  bot.py  bot_token.txt  docker-compose.yml  fix_calendar.sh  index-template.html  requirements.txt  test_calendar.html
photostudio-booking/app/: __init__.py  auth.py  database.py  email_service.py  main.py  models.py  schemas.py  security.py  telegram_service.py
photostudio-booking/app/routers/: auth.py
photostudio-booking/migrations/: 001_add_unique_constraint.sql  002_add_telegram_support.sql  003_add_additional_services.sql  MIGRATION_GUIDE.md
photostudio-booking/static/: admin.html  index.html
